fix spacing

--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -49,7 +49,7 @@ h2 {
   }
 
   input {
-    max-width: 356px;
+    width: 356px;
     height: 61px;
 
     font-family: "Mabry Pro";
@@ -74,6 +74,7 @@ h2 {
       height: 66px;
       left: 106px;
       top: 774px;
+      font-family: "Mabry Pro";
       cursor: pointer;
       font-style: normal;
       font-weight: 700;
@@ -112,7 +113,7 @@ h2 {
   .controls {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 40px;
+    margin-top: 17px;
     img {
       cursor: pointer;
     }
@@ -126,15 +127,18 @@ h2 {
       line-height: 174.28%;
       text-align: center;
       color: #000000;
-      margin: 0 0 18px;
+      margin: 52px 0 18px;
     }
-
+    .well-come-fra {
+      margin: 0 auto;
+    }
     .welcome-img {
-      margin: 50px 0px 47px;
+      margin: 50px auto 47px;
     }
   }
 
   .earn-section {
+    margin-top: 17px;
     .earn-text {
       font-family: "Dream to Berich DEMO (FOR USE P";
       font-style: normal;
@@ -143,7 +147,7 @@ h2 {
       line-height: 160%;
       text-align: center;
       color: #000000;
-      margin: 0 0 21px;
+      margin: 45px 0 21px;
 
       span {
         background: -webkit-linear-gradient(
@@ -180,10 +184,11 @@ h2 {
       text-align: center;
       color: #ffffff;
       border: none;
-      margin: 0 auto 79px;
+      margin: 0 auto 51px;
     }
     .hand-img {
-      margin: 0 auto 101px;
+      margin: 0 auto 50px;
+      padding-left: 20px;
     }
   }
   .post-guideines {
@@ -191,7 +196,7 @@ h2 {
       display: flex;
       align-items: flex-end;
       gap: 13px;
-      margin-bottom: 36px;
+      margin: 47px 0 36px;
       .post-title {
         font-weight: 400;
         font-size: 24px;
@@ -204,6 +209,7 @@ h2 {
     ul {
       margin: 0 0 144px;
       max-width: 381px;
+      padding-left: 10px;
       li {
         font-family: "Mabry Pro";
         font-style: normal;
@@ -223,7 +229,7 @@ h2 {
     max-width: 365px;
 
     .frankly-logo {
-      margin: 0 auto 26px;
+      margin: 25px auto 26px;
     }
     .congratulations-heading {
       font-style: normal;
@@ -264,7 +270,7 @@ h2 {
       line-height: 160%;
       text-align: center;
       color: #000000;
-      margin: 0;
+      margin: 98px 0 0;
     }
     .post-sub-heading {
       font-family: "Mabry Pro";
